Corrected intermediate step and fixed waypoints colors => Waypoints drag to finish